--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -91,6 +91,16 @@ input[type="number"] {
   position: absolute;
   animation-name: showResult;
   animation-duration: 0.35s;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease;
   animation-fill-mode: forwards;
+}
+
+@keyframes openDrawer {
+  from {
+    transform: translateX(100%);
+  }
+
+  to {
+    transform: translateX(0%);
+  }
 }
