--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -104,3 +104,29 @@ input[type="number"] {
     transform: translateX(0%);
   }
 }
+
+@keyframes showToast {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+
+  50% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+
+.toast-open {
+  animation-name: showToast;
+}
+
+.toast-hide {
+  animation-name: none;
+  display: none;
+}
