Upgrade solid-icons@0.1.1, Improve animation timing.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -111,14 +111,17 @@ input[type="number"] {
     opacity: 0;
   }
 
+  20% {
+    opacity: 1;
+  }
+
   50% {
     transform: translateY(0%);
-    opacity: 1;
   }
 
   100% {
     transform: translateY(-100%);
-    opacity: 0;
+    opacity: 0.5;
   }
 }
 
